Fix: Add all elements except page content from blog_index.html to blog_detail.html template.  Fix footer once again so sit below all content and not overlap by setting position to relative.

--- a/projects/static/projects/css/projects_styles.css
+++ b/projects/static/projects/css/projects_styles.css
@@ -153,8 +153,6 @@ body {
 
 /* Footer */
 #bs-footer-override {
-  position: fixed;  
-  bottom: 0%;
   font-size: 20px;
   padding: 15px;
   width: 100%;
